--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,19 @@
 
 body {
   margin: 0px;
-  font: 400 15px/1.8 Lato, sans-serif;
 }
 
+
+
 .navbar {
+      position: fixed;
       font-family: Montserrat, sans-serif;
-      margin-left: 0;
-      background-color: #2d2d30;
-      border: 0;
+      left: 0;
+      background-color: #361061;
+      border: none;
       font-size: 11px !important;
       letter-spacing: 4px;
-      opacity: 0.9;
+      opacity: 0.6;
   }
 
 #myNavbar {
@@ -30,11 +32,30 @@ body {
 }
 
 #myNavbar ul li a {
-  color: #34495E;
+  color: white;
   text-transform: uppercase;
 }
 
 #myNavbar ul li a:hover{
   color: #8BB5F2;
+  background: transparent;
+}
+
+/* title */
+.title {
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.title h1 {
+  color: #361061;
+  text-transform: uppercase;
+  font-size: 80px;
   font-weight: 900;
+  font-family: cursive;
+  text-shadow: 3px 3px 3px black,
+               4px 4px 5px white;
 }
