--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,15 @@ body {
       position: fixed;
       font-family: Montserrat, sans-serif;
       left: 0;
-      background-color: #361061;
+      background-color: #361061 !important;
       border: none;
       font-size: 11px !important;
       letter-spacing: 4px;
       opacity: 0.6;
+  }
+
+  .navbar-default {
+    background-color: #361061;
   }
 
 #myNavbar {
@@ -58,4 +62,45 @@ body {
   font-family: cursive;
   text-shadow: 3px 3px 3px black,
                4px 4px 5px white;
+}
+
+/* button */
+.title .btn-default {
+  position: fixed;
+  font-family: cursive;
+  top: 70%;
+  font-size: 2.5vw;
+  color: rgba(83, 240, 41, 0.75);
+  letter-spacing: 0.7px;
+  line-height: 3vw;
+  border: 2px solid rgba(83, 240, 41, 0.75);
+  border-radius: 40px;
+  background: rgba(76, 25, 115, 0.75);
+  transition: all 0.3s ease 0s;
+  box-shadow:
+        0px 3px rgba(83, 240, 41,1),
+        0px 4px rgba(83, 240, 41,1),
+        0px 5px rgba(64, 177, 11,1),
+        0px 6px rgba(55, 162, 4,1),
+        0px 7px rgba(50, 140, 8,1),
+        0px 8px rgba(29, 84, 4,1),
+        3px 2px 5px  rgba(114, 55, 160,0.75);
+
+    -webkit-transition: -webkit-box-shadow .1s ease-in-out;
+}
+
+.title .btn-default:hover {
+  color: #FFF;
+  background: rgba(81, 90, 90, 0.75);
+  border: 2px solid rgba(255, 255, 255, 0.75);
+  box-shadow:
+        0px 3px rgba(128,128,128,1),
+        0px 4px rgba(118,118,118,1),
+        0px 5px rgba(108,108,108,1),
+        0px 6px rgba(98,98,98,1),
+        0px 7px rgba(88,88,88,1),
+        0px 8px rgba(78,78,78,1),
+        3px 2px 5px  rgba(128,128,128,0.75);
+
+    -webkit-transition: -webkit-box-shadow .1s ease-in-out;
 }
